Menambahkan file nav_header.xml dan item drawable

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,6 @@
     <string name="aktifkan_notifikasi">Aktifkan Notifikasi</string>
     <string name="share_channel">Share Channel</string>
     <string name="btn_share">Share</string>
+    <string name="my_name_is">Nurkholiq Agani Hafid</string>
+    <string name="my_github">My GitHub: nurkholiqaganihafid</string>
 </resources>
