Menambahkan & modified values (colors.xml & themes.xml)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
     <string name="when">When</string>
     <string name="tgl_mulai">12 September 2021 \n15.00 WIB s/d Selesai </string>
     <string name="loc">Loc</string>
-    <string name="jalan">Jl. Poros Makassar - Parepare, Kec. Mallusetasi Kab. Barru. Rumah pagar warna hijau kuning samping penjual gorengan.</string>
+    <string name="jalan">Jl. Poros Makassar - Parepare....</string>
     <string name="dijual_oleh">Dijual oleh</string>
     <string name="nurkholiq_agani_hafid">Nurkholiq Agani Hafid</string>
     <string name="nama_channel">Nurkholiq Agani Hafid</string>
